; ModuleID = '/home/carl/AnghaBench/micropython/drivers/cc3000/src/extr_ccspi.c_WriteWlanPin.c'
source_filename = "/home/carl/AnghaBench/micropython/drivers/cc3000/src/extr_ccspi.c_WriteWlanPin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@PIN_EN = common dso_local global %struct.TYPE_2__* null, align 8
@WLAN_ENABLE = common dso_local global i64 0, align 8
@GPIO_PIN_SET = common dso_local global i32 0, align 4
@GPIO_PIN_RESET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @WriteWlanPin(i8 zeroext %0) #0 {
  %2 = alloca i8, align 1
  store i8 %0, i8* %2, align 1
  %3 = load %struct.TYPE_2__*, %struct.TYPE_2__** @PIN_EN, align 8
  %4 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** @PIN_EN, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i64, i64* @WLAN_ENABLE, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32, i32* @GPIO_PIN_SET, align 4
  br label %15

13:                                               ; preds = %1
  %14 = load i32, i32* @GPIO_PIN_RESET, align 4
  br label %15

15:                                               ; preds = %13, %11
  %16 = phi i32 [ %12, %11 ], [ %14, %13 ]
  %17 = call i32 @HAL_GPIO_WritePin(i32 %5, i32 %8, i32 %16)
  ret void
}

declare dso_local i32 @HAL_GPIO_WritePin(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
